# RESTKnot

./: .cliff.toml  .dprint.jsonc  .env.example  .gitignore  .travis.yml  .travis.yml.bckp  .typos.toml  CHANGELOG.md  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  celery_server.py  command.py  db.sql  docker-compose.override.yml  docker-compose.yml  example.py  justfile  knot.yml  manage.py  parser.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  run_command.py  sdml.yml  server.py  template.yml
agent/: .dockerignore  .env.example  .example.env  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  changelog.md  compose.example.yml  docker-compose.example.yml  docker-compose.yml  docker-compose.yml.example  justfile  manage.py  pyproject.toml  requirements.txt  run.sh  run_command.py  server.py  setup.cfg  setup.py  testing.py
agent/app/: __init__.py
agent/app/configs/: __init__.py
agent/app/controller/api/: __init__.py  command_rest.py
agent/app/controllers/api/: __init__.py  command.py
agent/app/helpers/: command_experiment.yml  knot.yml  redissession.py  sdl_parser.py
agent/app/libs/: utils.py
agent/app/middlewares/: auth.py  check_on.py
agent/app/namespace/: __init__.py  command.py  login.py  test.py
agent/app/static/template/: endpoint.yml
agent/bootstraping/: Dockerfile  boot.py  docker-compose.yml  requirements.txt
agent/command/: __init__.py  run_command.py
agent/command/control/: client.py
agent/command/parse/: parser.py
agent/command/parser/: parser.py
agent/command/utility/: utils.py
agent/dnsagent/: agent.py  cli.py  start.py
agent/dnsagent/clis/: __init__.py  base.py  command.py  envi.py  start.py  zone.py
agent/dnsagent/libs/: client.py  command_generator.py  command_lib.py  control.py  env_lib.py  kafka.py  kafka_lib.py  knot.py  knot_lib.py  parser.py  utils.py
agent/domba/: cli.py
agent/domba/clis/: base.py  command.py  envi.py  start.py  zone.py
agent/domba/libs/: env_lib.py  knot_lib.py
agent/parser/: parser.py
agent/src/agent/: main.py
agent/src/rkagent/: __init__.py  __main__.py  consumer.py
agent/test/: conftest.py  test_vm.py
agent/test/templates/: conf-db.yml  conf-insert.yml  conf-read.yml  configbegin.yml  configcommit.yml  configset.yml  gabungan.1.yml  gabungan.2.yml  gabungan.yml  readserver.yml  soazone.yml  zone-begin.yml  zone-check.yml  zone-flush.yml  zone-insert-soa.yml  zone-insert.yml  zone-read.yml  zoneabort.yml  zonebegin.yml  zoneflush.yml  zonegabung.yml  zoneread.yml  zoneset.yml
api/: .coveragerc  .dockerignore  .env  .env.example  .example.env  .flake8  .gitignore  .travis.yml  .travis.yml.test  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-Cockroach  Dockerfile.prod  Makefile  README.md  celery.sh  celery_devel.sh  celery_worker.py  changelog.md  compose.example.yml  config.example.toml  config.example.yml  create_dirs.py  db.sql  docker-compose.example.yml  docker-compose.yml  docker-compose.yml.example  gunicorn.conf.py  init-db.sh  justfile  manage.py  migrate_db.py  production.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  schema.sql  servers.yml.example  (+1 more)
api/app/: __init__.py  database.py
api/app/configs/: __init__.py
api/app/controllers/: __init__.py
api/app/controllers/api/: meta.py  (+24 more)
api/app/helpers/: check_on_sync.py  cl_command.py  cl_default.py  cluster_master.py  cluster_slave.py  cluster_task.py  cmd_parser.py  command.py  helpers.py  memcache.py  producer.py  refresh_zone.py  rest.py  rules.py  validator.py
api/app/libs/: counter.py  utils.py  validation.py
api/app/middlewares/: auth.py
api/app/models/: __init__.py  api_models.py  domain.py  domain_models.py  model.py  prepare.py  record.py  rules.py  ttl.py  type_.py  user.py  zone.py
api/app/static/: swagger.json  swagger.yaml  swagger_lama.json
api/app/vendors/: prepare.py  rest.py
api/configs/: __init__.py
api/db/: schema.sql
api/docs/: DATA_RECORD_ALL.md  DOMAIN_ALL.md  RECORD_NAME_ALL.md  REST_KNOT.json  TYPE_NAME_ALL.md
api/docs/DATA/: data_arsitektur.yml
api/docs/FE_EXAMPLE/: ovry.py
api/docs/postman/: REST_KNOT_COCKROACH.json
api/docs/swagger/: REST_KNOT.yaml
api/environtment/travis/: .coveragerc.example  builddb.sh  cleanup.sh  db.sql  deploy.sh  env.example  install.sh  preinstall.sh  push.sh  setup.sh  unittest.sh
api/src/: config.rs  context.rs  lib.rs  main.rs  routes.rs  scalar.rs
api/src/api/: autoapp.py
api/src/db/: mod.rs
api/src/errors/: app.rs  mod.rs
api/src/health/: query.rs
api/src/meta/: entities.rs  mod.rs  query.rs
api/src/record/: entities.rs  query.rs
api/src/rkapi/: autoapp.py
api/src/rtype/: entities.rs  query.rs
api/src/ttl/: entities.rs  mod.rs  query.rs
api/src/user/: entities.rs  query.rs
api/static/template/: knot.yml
api/test/: .test.env  conftest.py  test_add_dns_record.py  test_admin.py  test_check_on.py  test_cluster.py  test_command.py  test_conf.py  test_content.py  test_content_data.py  test_data_record.py  test_domain.py  test_record_name.py  test_ttl.py  test_ttl_data.py  test_ttl_type.py  test_user.py  test_validation.py  test_zone.py  utils.py  validate.yaml
api/test/ignore/: test_add_dns_record.py  test_conf.py
api/test/load/: user.py
api/test/socket/: app.py
api/tests/: docker-compose.yml  servers.yaml  test_env.env  test_schema.sql  tests.hurl
api/tests/fixtures/: messages.py
api/tests/functional/: conftest.py  docker-compose-kafka.yml  test_functional.py
api/tests/health/: mod.rs  schema.rs  tests.rs
api/tests/integration/: conftest.py  init_db.sh  test_domain.py  test_health.py  test_messages.py  test_record.py  test_rules.py  test_schema.sql  test_user.py
api/tests/load/: README.md  check_health.py  create_domain.py  create_user.py  readme.md  user.py
api/tests/meta/: schema.rs  tests.rs
api/tests/unit/: test_helpers.py  test_validator.py
backend/app/: config.example.yml  prestart.sh  pyproject.toml  schema.sql
backend/app/app/: main.py  tests_pre_start.py
backend/app/scripts/: test.sh
(+558 files in other folders)
