[tool.poetry]
name = "agent"
version = "0.7.12"
description = "RESTKnot Agent"
authors = ["Azzam S.A <azzam@biznetgio.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
confluent-kafka = "2.0.2"
libknot = "3.2.5"
PyYAML = "6.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"
pytest-mock = "3.10.0"
black = "23.7.0"
ruff = "0.0.280"
isort = "5.12.0"

[tool.isort]
profile = "black"
known_first_party = "app"

[tool.ruff]
ignore = [
  "E501",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
