[project]
name = "rkagent" # restknot-agent
version = "0.7.12"
description = "RESTKnot Agent"
authors = [
    { name = "Azzam S.A", email = "azzam@biznetgio.com" },
]
dependencies = [
    "confluent-kafka==2.0.2",
    "libknot==3.3.8",
    "PyYAML==6.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rkagent"]
