[tool.poetry]
name = "api"
version = "0.7.12"
description = "RESTKnot API"
authors = ["Azzam S.A <azzam@biznetgio.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "1.7.0"
environs = "9.5.0"
Flask = "2.2.2"
Flask-Cors = "3.0.10"
Flask-RESTful = "0.3.9"
libknot = "3.2.1"
psycopg2 = "2.9.5"
python-dotenv = "0.21.0"
PyYAML = "6.0"
requests = "2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
flake8-isort = "^5.0.0"
pytest-mock = "^3.10.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
